[gd_scene load_steps=16 format=2]

[ext_resource path="res://Assets/Images/Textures/Nebula Blue.png" type="Texture" id=1]
[ext_resource path="res://Assets/Images/Textures/Stars Small_1.png" type="Texture" id=2]
[ext_resource path="res://Assets/Images/Textures/Stars-Big_1_1_PC.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Interface/MainMenu.gd" type="Script" id=4]
[ext_resource path="res://Assets/Fonts/Kenney Future Narrow.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=7]
size = 20
outline_size = 1
outline_color = Color( 0.752941, 0.752941, 0.752941, 1 )
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 50
outline_size = 1
outline_color = Color( 0.752941, 0.752941, 0.752941, 1 )
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=5]
size = 22
outline_size = 1
outline_color = Color( 0.752941, 0.752941, 0.752941, 1 )
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=6]
size = 40
outline_size = 1
outline_color = Color( 0.752941, 0.752941, 0.752941, 1 )
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=12]
size = 12
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 20
outline_size = 1
outline_color = Color( 0.752941, 0.752941, 0.752941, 1 )
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.454902, 0.572549, 0.698039, 0.784314 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.172549, 0.219608, 0.27451, 0.784314 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.266667, 0.333333, 0.407843, 0.784314 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRectSpace" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -90.0
margin_top = -300.0
margin_right = 106.0
margin_bottom = 320.0
rect_pivot_offset = Vector2( 610, 610 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRectStars1" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -90.0
margin_top = -300.0
margin_right = 106.0
margin_bottom = 320.0
rect_pivot_offset = Vector2( 610, 610 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRectStars2" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -90.0
margin_top = -300.0
margin_right = 106.0
margin_bottom = 320.0
rect_pivot_offset = Vector2( 610, 610 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1014.0
margin_bottom = 590.0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 566.0
margin_right = 1004.0
margin_bottom = 580.0
alignment = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 909.0
margin_right = 1004.0
margin_bottom = 14.0
text = "By: Firemanarg"

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 372.0
margin_top = 190.0
margin_right = 652.0
margin_bottom = 409.0
custom_constants/separation = 20
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer3" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 280.0
margin_bottom = 139.0

[node name="VBoxContainer2" type="VBoxContainer" parent="CenterContainer/VBoxContainer/VBoxContainer3"]
margin_right = 280.0
margin_bottom = 121.0
custom_constants/separation = -10

[node name="Label4" type="Label" parent="CenterContainer/VBoxContainer/VBoxContainer3/VBoxContainer2"]
margin_right = 280.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 7 )
text = "The"
align = 1

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/VBoxContainer3/VBoxContainer2"]
margin_top = 13.0
margin_right = 280.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 4 )
text = "Delay"
align = 1

[node name="Label2" type="Label" parent="CenterContainer/VBoxContainer/VBoxContainer3/VBoxContainer2"]
margin_top = 60.0
margin_right = 280.0
margin_bottom = 86.0
custom_fonts/font = SubResource( 5 )
text = "out of"
align = 1

[node name="Label3" type="Label" parent="CenterContainer/VBoxContainer/VBoxContainer3/VBoxContainer2"]
margin_top = 76.0
margin_right = 280.0
margin_bottom = 121.0
custom_fonts/font = SubResource( 6 )
text = "Space"
align = 1

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/VBoxContainer3"]
margin_top = 125.0
margin_right = 280.0
margin_bottom = 139.0
custom_fonts/font = SubResource( 12 )
text = "LUDUM DARE #50 EDITION"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 159.0
margin_right = 280.0
margin_bottom = 219.0

[node name="ButtonStart" type="Button" parent="CenterContainer/VBoxContainer/VBoxContainer"]
margin_right = 280.0
margin_bottom = 60.0
rect_min_size = Vector2( 280, 60 )
focus_mode = 0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 11 )
custom_styles/focus = SubResource( 10 )
custom_styles/normal = SubResource( 1 )
text = "Start"

[connection signal="pressed" from="CenterContainer/VBoxContainer/VBoxContainer/ButtonStart" to="." method="_on_ButtonStart_pressed"]
